syntax = "proto3";
//生成的java类所在的包名
package tm;

//登录请求结构体
message LoginRequest {
  string username = 1;
  string pwd = 2;
}
//登录响应结构体
message LoginResponse {
  int32 code = 1;
  string msg = 2;
}

enum ErrorCode {
  Success = 0;    // 成功
  Err_1 = 1;    // 错误1
  Err_2 = 2;    // 错误2
}